# zoomcamp-dataeng-proj

./: .gitignore  CLAUDE.md  Makefile  README.md  kaggle-data-snapshot.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: risk_batch_ingest.py
bigquery/: production_tables.sql  staging_tables.sql
dashboard/: DESIGN.md  evidence.config.yaml  package.json
dashboard/pages/: index.md
dashboard/sources/bigquery/: amount_buckets.sql  connection.yaml  risk_summary.sql
dashboard/sources/narration/: connection.yaml  summary.csv
dbt/: dbt_project.yml
dbt/models/marts/: fct_transactions.sql  mart_risk_summary.sql
dbt/models/staging/: sources.yml  stg_identity.sql  stg_transactions.sql
docs/: deploy-github-pages.md  deploy-vercel.md
redpanda/: console-config.yaml  consumer.py  docker-compose.yaml  producer.py
scripts/: generate_narration.py  ingest_to_gcs.py  requirements.txt
terraform/: main.tf  outputs.tf  variables.tf
