[project]
name = "zoomcamp-dataeng-proj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.1.1",
    "kafka-python>=2.3.0",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
]
